methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:7: error: too many arguments for method retourne: ()Unit
  retourne(14)
          ^