methods.picture.PictureMono2.scala.code
override def run() {
  for (i<-1 to 3) {
    for (i<-1 to 4) {
    faireV()
    avance(7)
  }
  retourne(14)
  gauche()
  avance(7)
  droite()
    
}
}

def faireV() {
    avance(2)
    brosse()
    gauche()
    avance()
    droite()
    avance()
    brosse()
    avance()
    droite()
    avance()
    brosse()
    gauche()
    avance(2)
    gauche()
  
  
}

def brosse() {
  baisseBrosse()
  leveBrosse()
}